tests/baselines/reference/functionOverloads1(strict=true).errors.txt
functionOverloads1.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
functionOverloads1.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads1.ts (2 errors) ====
    function foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    1+1;
    function foo():string { return "a" }